--- a/Tailspin.SpaceGame.Web.Models/Tailspin.SpaceGame.Web.Models.csproj
+++ b/Tailspin.SpaceGame.Web.Models/Tailspin.SpaceGame.Web.Models.csproj
@@ -3,5 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Tailspin.SpaceGame.Web.Models" Version="1.0.0-CI-20200610-165738" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\images\avatars\" />
+  </ItemGroup>
 </Project>
